feature: dinamização das páginas da view com a nova rota 'show' pra cada artigo

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,6 +3,7 @@
     <% @articles.each do | article |%>
         <h2><strong><%= article.title %></strong></h2>
         <p><%= article.body %></p>
+        <a href="/articles/<%= article.id%>">Visualizar</a>
         <hr>
     <% end %>
 </ul>
