feature: abordagem de helper com função link_to

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,8 +4,8 @@
         <h2><strong><%= article.title %></strong></h2>
         <p><%= article.body %></p>
         <!-- <a href="/articles/<%= article.id%>">Visualizar</a> MÉTODO ANTIGO-->
-        <a href="<%= article_path(article) %>">Visualizar</a> 
-        <!-- Helper utilizado para retornar o ID do artigo dentro da iteração -->
+        <%= link_to("Visualizar", article)%>
+        <!-- Helper utilizado para retornar o link para artigo dentro da iteração -->
         <hr>
     <% end %>
 </ul>
