feature: adicionando a validação dos inputs e links de acesso entre as views com o helper 'link_to'

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,6 @@
 <h1>Artigos</h1>
+<%= link_to "Criar Artigo", new_article_path %>
+<hr>
 <ul>
     <% @articles.each do | article |%>
         <h2><strong><%= article.title %></strong></h2>
