--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,5 +3,5 @@
 <ul>
     <h2><strong><%= @article.title %></strong></h2>
     <p><%= @article.body %></p>
-    <a href="/articles">Voltar</a>
+    <%= link_to "Voltar", root_path %>
 </ul>
