--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,5 +3,7 @@
 <ul>
     <h2><strong><%= @article.title %></strong></h2>
     <p><%= @article.body %></p>
+    <%= link_to "Editar Artigo", edit_article_path %>
+    <br>
     <%= link_to "Voltar", root_path %>
 </ul>
