--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,6 +4,9 @@
     <h2><strong><%= @article.title %></strong></h2>
     <p><%= @article.body %></p>
     <%= link_to "Editar Artigo", edit_article_path %>
+    <%= link_to "Deletar Artigo", article_path(@article),
+        method: :delete,
+        data: {confirm: "Você realmente deseja deletar o artigo?"}%>
     <br>
     <%= link_to "Voltar", root_path %>
 </ul>
