--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,12 +1,30 @@
 <h1>Dados do Artigo <%= @article.id %></h1>
 
-<ul>
-    <h2><strong><%= @article.title %></strong></h2>
-    <p><%= @article.body %></p>
-    <%= link_to "Editar Artigo", edit_article_path %>
-    <%= link_to "Deletar Artigo", article_path(@article),
-        method: :delete,
-        data: {confirm: "Você realmente deseja deletar o artigo?"}%>
-    <br>
-    <%= link_to "Voltar", root_path %>
-</ul>
+<h2><strong><%= @article.title %></strong></h2>
+<p><%= @article.body %></p>
+<%= link_to "Editar Artigo", edit_article_path %>
+<button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+Excluir Artigo
+</button>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal-dialog" role="document">
+    <div class="modal-content">
+    <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal teste</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    </div>
+    <div class="modal-body">
+        Você realmente deseja deletar o artigo?
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn bg-gradient bg-secondary text-light" data-bs-dismiss="modal">Não</button>
+        <button type="button" class="btn bg-gradient bg-danger">
+        <%= link_to "Excluir", article_path(@article), method: :delete, class: "text-light" %>
+        </button>
+    </div>
+    </div>
+</div>
+</div>
+<br>
+<%= link_to "Voltar", root_path %>
