feature: utilizando do partial para modularizar os componentes da aplicação

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,17 +1,5 @@
 <h1>Editar Artigo <%= @article.id %></h1>
 
-<%= form_with model: @article do | form | %>
-    <div>
-        <%= form.label :title%>        
-        <%= form.text_field :title%>        
-    </div>
-    <div>
-        <%= form.label :body%>        
-        <%= form.text_area :body%>        
-    </div>
-    <div>
-        <%= form.submit "Editar artigo"%>
-    </div>
-<% end %>
+<%= render 'form', article: @article, submitMessage: 'Editar' %>
 
 <%= link_to("Cancelar", root_path)%>
