--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,17 +1,5 @@
 <h1>Novo Artigo</h1>
 
-<%= form_with model: @article do | form | %>
-    <div>
-        <%= form.label :title%>        
-        <%= form.text_field :title%>        
-    </div>
-    <div>
-        <%= form.label :body%>        
-        <%= form.text_area :body%>        
-    </div>
-    <div>
-        <%= form.submit "Criar artigo"%>
-    </div>
-<% end %>
+<%= render 'form', article: @article, submitMessage: 'Criar' %>
 
 <%= link_to("Cancelar", root_path)%>
