--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="py-5 text-center text-body-secondary bg-body-tertiary">
+<footer class="py-5 text-center text-body-secondary bg-gradient bg-body">
     <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
     <p class="mb-0">
       <a href="#">Back to top</a>
