feature: criação da sidebar para os artigos e convenção de uso de inglês para toda a aplicação, visando futura internacionalização

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -8,6 +8,6 @@
     <%= form.text_area :body %>        
   </div>
   <div>
-    <%= form.submit submitMessage || 'Salvar' %>
+    <%= form.submit submitMessage || 'Save' %>
   </div>
 <% end %>
