--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,5 @@
-<h1>Novo Artigo</h1>
+<h1>New Article</h1>
 
-<%= render 'form', article: @article, submitMessage: 'Criar' %>
+<%= render 'form', article: @article, submitMessage: 'Create' %>
 
-<%= link_to("Cancelar", root_path)%>
+<%= link_to("Cancel", root_path)%>
