--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,7 +10,7 @@
     <h3 class="pb-4 mb-4 fst-italic border-bottom">
       From the Firehose
     </h3>
-    <%= link_to "Create Article", new_article_path %>
+    <%= link_to "Create article", new_article_path, class: 'btn btn-lg btn-success' %>
     <br><br> 
     <%= render @articles %>
     <%= render 'pagination' %>
