--- a/app/views/layouts/_topnavbar.html.erb
+++ b/app/views/layouts/_topnavbar.html.erb
@@ -5,7 +5,7 @@
           <a class="link-secondary" href="#">Subscribe</a>
         </div>
         <div class="col-4 text-center">
-          <a class="blog-header-logo text-body-emphasis text-decoration-none" href="#">Blog'O'Rama</a>
+          <a class="blog-header-logo text-body-emphasis text-decoration-none" href="#">Blogalizando</a>
         </div>
         <div class="col-4 d-flex justify-content-end align-items-center">
           <a class="link-secondary" href="#" aria-label="Search">
