--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,13 +1,14 @@
-<%= form_with model: @article do |form| %>
+<%= simple_form_for article do |form| %>
   <div>
-    <%= form.label :title %>        
-    <%= form.text_field :title %>        
+    <%= form.input :title %>        
+    <%= form.input :body, input_html: {rows: 10} %>        
   </div>
-  <div>
-    <%= form.label :body %>        
-    <%= form.text_area :body %>        
-  </div>
-  <div>
-    <%= form.submit submitMessage || 'Save' %>
-  </div>
+
+  <br>
+
+  <p>
+    <%= form.button :submit, class: 'btn btn-primary'%>
+    <%= link_to("Cancelar", @article, class: 'btn btn-secondary')%>
+  </p>
+
 <% end %>
