--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,3 @@
 <h1>Editar Artigo <%= @article.id %></h1>
 
-<%= render 'form', article: @article, submitMessage: 'Editar' %>
-
-<%= link_to("Cancelar", root_path)%>
+<%= render 'form', article: @article %>
