feature: adicionando publicações recentes no topo da página da aplicação

--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -4,5 +4,5 @@
     <!-- Helper para formatar textos grandes nos artigos da home -->
     <p style="text-align: justify;"><%= truncate(article.body, length: 300) %></p>
     
-    <%= link_to "See more", article, class: 'btn bg-gradient bg-primary text-light'%>
+    <%= link_to "See more...", article, class: 'btn bg-gradient bg-primary text-light'%>
 </article>
