--- a/app/views/articles/_medium_featured.html.erb
+++ b/app/views/articles/_medium_featured.html.erb
@@ -4,13 +4,10 @@
   >
     <div class="col p-4 d-flex flex-column position-static">
       <strong class="d-inline-block mb-2 text-primary">World</strong>
-      <h3 class="mb-0">Featured post</h3>
-      <div class="mb-1 text-muted">Nov 12</div>
-      <p class="card-text mb-auto">
-        This is a wider card with supporting text below as a natural lead-in to
-        additional content.
-      </p>
-      <a href="#" class="stretched-link">Continue reading</a>
+      <h3 class="mb-0"><%= article.title%></h3>
+      <div class="mb-1 text-muted"><%= m_d_comma_y(article.created_at) %></div>
+      <p class="card-text mb-auto"><%= truncate(article.body, length: 150) %></p>
+      <%= link_to "See more...", article, class:"stretched-link" %>
     </div>
     <div class="col-auto d-none d-lg-block">
       <svg
