--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,8 @@
   <body>
     <%= render 'layouts/topnavbar' %>
     <div class="container">
+      <%= render 'layouts/flash_msg' %>
+
       <%= yield %>
     </div>
     <%= render 'layouts/footer' %>
