--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,14 +1,53 @@
 <% content_for :title, "Categories" %>
 
 <h1>Categories</h1>
+<hr>
 
-<div id="categories">
-  <% @categories.each do |category| %>
-    <%= render category %>
-    <p>
-      <%= link_to "Show this category", category %>
-    </p>
-  <% end %>
+<div class="card-body mt-3">
+  <table class="table table-bordered table-hover text-center">
+    <thead class="table-dark">
+      <tr>
+        <th scope="col">Name</th>
+        <th scope="col">Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @categories.each do |category| %>
+        <tr>
+          <td scope="row"><strong><%= category.name %></strong></td>
+          <td>
+            <%= link_to category, class: 'btn bg-gradient bg-primary text-light' do %>
+              <i class="bi bi-pencil-square"></i> Expand
+            <% end %>
+
+            <%= link_to edit_category_path(category), class: 'btn bg-gradient bg-success text-light' do %>
+              <i class="bi bi-pencil-square"></i> Update
+            <% end %>
+
+            <button type="button" class="btn bg-gradient bg-danger text-light" data-bs-toggle="modal" data-bs-target="#deleteModal-<%= category.id %>">
+              Delete category
+            </button>
+          </td>
+        </tr>
+        <div class="modal fade" id="deleteModal-<%= category.id %>" tabindex="-1" aria-labelledby="deleteModalLabel-<%= category.id %>" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+              <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title" id="deleteModalLabel-<%= category.id %>">Delete category</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                  Do you really want to delete the category "<%= category.name %>"?
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn bg-gradient bg-secondary text-light" data-bs-dismiss="modal">No</button>
+                  <%= link_to "Yes", category, method: :delete, class: "btn bg-gradient bg-danger text-light" %>
+              </div>
+            </div>
+        </div>
+      <% end %>
+    </tbody>
+  </table>
 </div>
-
-<%= link_to "New category", new_category_path %>
+<hr>
+<%= link_to "Create category", new_category_path, class: 'btn btn-lg bg-gradient bg-success text-light' %>
