--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -21,11 +21,11 @@
             <% end %>
 
             <%= link_to edit_category_path(category), class: 'btn bg-gradient bg-success text-light' do %>
-              <i class="bi bi-pencil-square"></i> Update
+              <i class="bi bi-pencil-square"></i> Edit
             <% end %>
 
             <button type="button" class="btn bg-gradient bg-danger text-light" data-bs-toggle="modal" data-bs-target="#deleteModal-<%= category.id %>">
-              Delete category
+              Delete
             </button>
           </td>
         </tr>
