--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -16,12 +16,16 @@
   <div>
     <%= form.input :body, input_html: { rows: 10, class: "form-control #{'is-invalid' if @article.errors[:body].any?}" } %>
   </div>
+  <div>
+    <!-- O atributo collection filtra para que as categorias aparecam em ordem alfabética -->
+    <%= form.association :category, collection: Category.sorted, prompt: "Choose your category",input_html: { class: "form-control" } %>
+  </div>
 
   <br>
 
   <p>
     <%= form.button :submit, class: 'btn btn-primary' %>
-    <%= link_to "Cancelar", articles_path, class: 'btn btn-secondary' %>
+    <%= link_to "Cancel", articles_path, class: 'btn btn-secondary' %>
   </p>
 
 <% end %>
