--- a/app/views/articles/_medium_featured.html.erb
+++ b/app/views/articles/_medium_featured.html.erb
@@ -1,14 +1,13 @@
 <div class="col-md-6">
-  <div
-    class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative"
-  >
+  <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative" >
     <div class="col p-4 d-flex flex-column position-static">
-      <strong class="d-inline-block mb-2 text-primary">World</strong>
+      <strong class="d-inline-block mb-2 text-primary"><%= article.category.name if article.category %></strong>
       <h3 class="mb-0"><%= article.title%></h3>
       <div class="mb-1 text-muted"><%= m_d_comma_y(article.created_at) %></div>
       <p class="card-text mb-auto"><%= truncate(article.body, length: 150) %></p>
       <%= link_to "See more...", article, class:"stretched-link" %>
     </div>
+    
     <div class="col-auto d-none d-lg-block">
       <svg
         class="bd-placeholder-img"
