--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -7,6 +7,8 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, class: 'btn btn-lg btn-primary' %>
+    
+    <%= link_to "Cancel", categories_path, class: 'btn btn-lg btn-secondary' %>
   </div>
 <% end %>
