--- a/app/views/layouts/_topnavbar.html.erb
+++ b/app/views/layouts/_topnavbar.html.erb
@@ -2,10 +2,10 @@
     <header class="border-bottom lh-1 py-3">
       <div class="row flex-nowrap justify-content-between align-items-center">
         <div class="col-4 pt-1">
-          <a class="link-secondary" href="#">Subscribe</a>
+          <%= link_to "See categories", categories_path, class:'link-secondary'%>
         </div>
         <div class="col-4 text-center">
-          <a class="blog-header-logo text-body-emphasis text-decoration-none" href="#">Blogalizando</a>
+          <%= link_to "Blogalizando", root_path, class:'blog-header-logo text-body-emphasis', style:'text-decoration: underline;' %>
         </div>
         <div class="col-4 d-flex justify-content-end align-items-center">
           <a class="link-secondary" href="#" aria-label="Search">
