--- a/app/views/articles/_about.html.erb
+++ b/app/views/articles/_about.html.erb
@@ -1,4 +1,4 @@
 <div class="p-4 mb-3 bg-light rounded">
     <h4 class="fst-italic">About</h4>
-    <p class="mb-0">My name is Eduardo Reche, and I’m a Brazilian full-stack developer with a passion for softwares and technology. I strive to balance creativity and professionalism in all my projects. Be sure to check out my profile for some of the skills I bring to the table!</p>
+    <p class="mb-0">My name is Eduardo Reche, and I’m a Brazilian full-stack developer with a passion for softwares and technology. I strive to balance creativity and professionalism in all my projects. Be sure to check out this website for some of the skills I bring to the table!</p>
 </div>
