--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,104 @@
-<footer class="py-5 text-center text-body-secondary bg-gradient bg-body">
-    <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-    <p class="mb-0">
-      <a href="#">Back to top</a>
-    </p>
+<footer class="text-center text-lg-start text-white bg-gradient bg-dark mt-5">
+  <div class="container p-4 pb-0">
+    <section class="">
+      <div class="row">
+        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold">
+            Blogalizando
+          </h6>
+          <p>
+            My name is Eduardo Reche, and I’m a Brazilian full-stack developer 
+            with a passion for softwares and technology. Be sure to check 
+            out my blog for some of the skills I bring to the table!
+          </p>
+        </div>
+
+        <hr class="w-100 clearfix d-md-none" />
+
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
+          <p>
+            <a class="text-white">MDBootstrap</a>
+          </p>
+          <p>
+            <a class="text-white">MDWordPress</a>
+          </p>
+          <p>
+            <a class="text-white">BrandFlow</a>
+          </p>
+          <p>
+            <a class="text-white">Bootstrap Angular</a>
+          </p>
+        </div>
+
+        <hr class="w-100 clearfix d-md-none" />
+
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold">
+            Useful links
+          </h6>
+          <p>
+            <a class="text-white">Your Account</a>
+          </p>
+          <p>
+            <a class="text-white">Become an Affiliate</a>
+          </p>
+          <p>
+            <a class="text-white">Shipping Rates</a>
+          </p>
+          <p>
+            <a class="text-white">Help</a>
+          </p>
+        </div>
+
+        <hr class="w-100 clearfix d-md-none" />
+
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+          <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
+          <p><i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
+          <p><i class="fas fa-envelope mr-3"></i> info@gmail.com</p>
+          <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
+          <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+        </div>
+      </div>
+    </section>
+
+    <hr class="my-3">
+
+    <section class="p-3 pt-0">
+      <div class="row d-flex align-items-center">
+        <div class="col-md-7 col-lg-8 text-center text-md-start">
+          <div class="p-3">
+            © 2025 Copyright:
+            <a class="text-white" href="https://www.linkedin.com/in/eduardorechemartins/" target="_blank"
+                >Eduardo Reche</a
+              >
+          </div>
+        </div>
+
+        <div class="col-md-5 col-lg-4 ml-lg-0 text-center text-md-end">
+          <a
+              class="btn btn-outline-light btn-floating m-1"
+              class="text-white"
+              role="button"
+              ><i class="fab fa-whatsapp"></i
+            ></a>
+
+          <a
+              class="btn btn-outline-light btn-floating m-1"
+              class="text-white"
+              role="button"
+              ><i class="fab fa-linkedin"></i
+            ></a>
+
+          <a
+              class="btn btn-outline-light btn-floating m-1"
+              class="text-white"
+              role="button"
+              ><i class="fab fa-github"></i
+            ></a>
+        </div>
+      </div>
+    </section>
+  </div>
 </footer>
