--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,9 @@
 <h1><strong><%= @article.title %></strong></h1>
 <strong class="d-inline-block text-primary"><%= @article.category.name if @article.category %></strong>
-<p class="blog-post-meta"><%= m_d_comma_y(@article.created_at) %> <a href="#">Chris</a></p>
+<p class="blog-post-meta">
+    <%= m_d_comma_y(@article.created_at) %> by 
+    <span class="text-secondary fw-bold"><%= @article.user.email if @article.user %></span>
+</p>
 <hr>
 <p style="text-align: justify;"><%= @article.body %></p>
 <hr>
