--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,5 +1,5 @@
 <h2>Change your password</h2>
-
+<hr>
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
 
@@ -20,8 +20,8 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Change my password" %>
+    <%= f.button :submit, "Change my password", class: 'btn btn-lg btn-primary' %>
   </div>
 <% end %>
-
+<hr>
 <%= render "devise/shared/links" %>
