--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="text-center text-lg-start text-white bg-gradient bg-dark mt-5">
+<footer class="text-center text-lg-start text-white bg-dark mt-5">
   <div class="container p-4 pb-0">
     <section class="">
       <div class="row">
