feature: configuração de autorização de ações do site com pundit completa

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,7 +11,7 @@
     <h3 class="pb-4 mb-4 fst-italic border-bottom">
       All my journey
     </h3>
-    <%= link_to "Create article", new_article_path, class: 'btn btn-lg btn-success' %>
+    <%= link_to "Create your article", new_article_path, class: 'btn btn-lg btn-success' %>
     <br><br> 
     <!-- Funcionalidade do rails para iterar os componentes -->
     <!-- a linha abaixo realiza um each.do para cada artigo que foi passado pelo controller -->
