--- a/app/views/layouts/_topnavbar.html.erb
+++ b/app/views/layouts/_topnavbar.html.erb
@@ -2,15 +2,16 @@
     <header class="border-bottom lh-1 py-3">
       <div class="row flex-nowrap justify-content-between align-items-center">
         <div class="col-4 pt-1">
-          <%= link_to "See categories", categories_path, class:'link-secondary'%>
+          <!-- Feature do pundit que apenas fornece acesso as categorias
+             se o usuário tiver acesso ao index (se admin for true)  -->
+          <% if policy(:category).index? %>
+            <%= link_to "See categories", categories_path, class:'link-secondary'%>
+          <% end %>
         </div>
         <div class="col-4 text-center">
           <%= link_to "Blogalizando", root_path, class:'blog-header-logo text-body-emphasis', style:'text-decoration: underline;' %>
         </div>
         <div class="col-4 d-flex justify-content-end align-items-center">
-          <a class="link-secondary" href="#" aria-label="Search">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg>
-          </a>
           <%= render 'layouts/links_account'%>
         </div>
       </div>
