--- a/app/views/articles/_elsewhere.html.erb
+++ b/app/views/articles/_elsewhere.html.erb
@@ -1,8 +1,20 @@
 <div class="p-4">
-    <h4 class="fst-italic">Elsewhere</h4>
-    <ol class="list-unstyled">
-      <li><a href="#">GitHub</a></li>
-      <li><a href="#">Twitter</a></li>
-      <li><a href="#">Facebook</a></li>
+    <h4 class="fst-italic mb-3">Elsewhere</h4>
+    <ol class="list-unstyled d-flex gap-2">
+      <li>
+        <a href="https://github.com/RecheEduardo" target="_blank" class="btn scale-btn bg-gradient bg-dark text-light">
+          <i class="fa-brands fa-github"></i> GitHub
+        </a>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/in/eduardorechemartins/" target="_blank" class="btn scale-btn bg-gradient bg-dark text-light">
+          <i class="fa-brands fa-linkedin"></i> LinkedIn
+        </a>
+      </li>
+      <li>
+        <a href="mailto:eduardorechemartins2006@gmail.com" target="_blank" class="btn scale-btn bg-gradient bg-dark text-light">
+          <i class="fa-solid fa-envelope"></i> Mail me
+        </a>
+      </li>
     </ol>
 </div>
