--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -20,3 +20,15 @@
   </div>
   <%= render 'aside' %>
 </div>
+
+<!-- Carrega a navbar apenas no index da aplicação pelo 'yield' -->
+<%= content_for :category_filter do %> 
+  <div class="nav-scroller py-1 mb-3 border-bottom">
+    <nav class="nav nav-underline justify-content-between">
+      <% @categories.each do | category | %>
+        <%= link_to category.name, root_path(category_id: category.id), 
+        class: "nav-item nav-link link-body-emphasis #{'category-active' if category.id.to_s == params[:category_id]}" %>
+      <% end %>
+    </nav>
+  </div>
+<% end %>
