--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -26,8 +26,8 @@
   <div class="nav-scroller py-1 mb-3 border-bottom">
     <nav class="nav nav-underline justify-content-between">
       <% @categories.each do | category | %>
-        <%= link_to category.name, root_path(category_id: category.id), 
-        class: "nav-item nav-link link-body-emphasis #{'category-active' if category.id.to_s == params[:category_id]}" %>
+        <%= link_to category.name, root_path(category: category.name), 
+        class: "nav-item nav-link link-body-emphasis #{'category-active' if category.name.to_s == params[:category]}" %>
       <% end %>
     </nav>
   </div>
