feature: implementando funcionalidade de filtragem cronológica de posts com a gem 'groupdate'

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -4,7 +4,7 @@
 .scale-btn{ transition: .25s !important;}
 .scale-btn:hover {scale: 1.05; transition: .25s;}
 
-.category-active { 
+.filter-active { 
     font-weight: bold !important;
     text-decoration: underline !important;
 }
