--- a/app/views/layouts/_links_account.html.erb
+++ b/app/views/layouts/_links_account.html.erb
@@ -1,6 +1,6 @@
 <% if user_signed_in? %>
     <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
             <%= current_user.email %>
         </button>
         <ul class="dropdown-menu dropdown-menu-dark">
@@ -11,7 +11,7 @@
     </div>
 <% else %>
     <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
             Enter
         </button>
         <ul class="dropdown-menu dropdown-menu-dark">
