--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -38,13 +38,30 @@
             <blockquote class="blockquote mb-0">
                 <p><%= comment.body %></p>
                 <hr>
-                <strong class="text-secondary small">
-                    <i class="fa-solid fa-user px-2"></i>
-                    <cite title="Source Title" style="text-decoration: underline;">
-                        <%= comment.user.email %>
-                    </cite>
-                    on <%= m_d_comma_y(comment.created_at) %> 
-                </strong>
+                <div class="d-flex justify-content-between">
+                    <div>
+                        <strong class="text-secondary small">
+                            <i class="fa-solid fa-user px-2"></i>
+                            <cite title="Source Title" style="text-decoration: underline;">
+                                <%= comment.user.email %>
+                            </cite>
+                            on <%= m_d_comma_y(comment.created_at) %> 
+                        </strong>
+                    </div>
+                    <div>
+                        <% if policy(@article).edit?%>
+                            <%= link_to edit_article_path, class: "button-link text-decoration-none" do %>
+                                <button type="button" class="btn btn-sm btn-outline-primary">Edit comment</button>
+                            <% end %>
+                         <% end %>
+        
+                        <% if policy(@article).destroy?%>
+                            <button type="button" class="btn btn-sm btn-outline-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                Delete comment
+                            </button>
+                        <% end %>
+                    </div>
+                </div>
             </blockquote>
         </div>
     </div>
