fix: fazendo migration para permitir que usuários não logados possam comentar nos posts

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -8,7 +8,7 @@
                     <strong class="text-secondary small">
                         <i class="fa-solid fa-user px-2"></i>
                         <cite title="Source Title" style="text-decoration: underline;">
-                            <%= comment.user.email %>
+                            <%= comment.author_name %>
                         </cite>
                         on <%= m_d_comma_y(comment.created_at) %> 
                     </strong>
