--- a/app/views/layouts/_flash_msg.html.erb
+++ b/app/views/layouts/_flash_msg.html.erb
@@ -1,11 +1,11 @@
 <% if notice.present? %>
-  <div class="alert alert-success" role="alert">
+  <div class="alert alert-success my-3" role="alert">
     <%= notice %>
   </div>
 <% end %>
 
 <% if alert.present? %>
-  <div class="alert alert-danger" role="alert">
+  <div class="alert alert-danger my-3" role="alert">
     <%= alert %>
   </div>
 <% end %>
