feature: estilização customizada de conteúdo com animações

--- a/app/views/articles/_longer_featured.html.erb
+++ b/app/views/articles/_longer_featured.html.erb
@@ -6,6 +6,6 @@
       <!-- Helper para formatar textos grandes nos artigos da home -->
       <p class="lead my-3"><%= truncate(article.body, length: 150) %></p>
       <br>
-      <p class="lead mb-0"><%= link_to "See more...", article, class: 'btn btn-lg btn-primary'%></p>
+      <p class="lead mb-0"><%= link_to "See more...", article, class: 'btn btn-lg btn-primary scale-btn'%></p>
     </div>
 </div>
