--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,8 @@
+body{
+ font-family: 'Quicksand', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif !important; 
+ font-weight: 500;
+}
+
 .main-content{
     min-height: 60svh;
 }
@@ -7,4 +12,69 @@
 .filter-active { 
     font-weight: bold !important;
     text-decoration: underline !important;
+}
+
+/* Animações */
+@keyframes fadeInDown {
+    from{
+        opacity: 0.5;
+        transform: translateY(-60px);
+    }
+
+    to{
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+@keyframes fadeInUp {
+    from{
+        opacity: 0.5;
+        transform: translateY(50px);
+    }
+    to{
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+@keyframes popUp {
+    from{
+        transform: translateY(30px);
+        scale: 0.8;
+        opacity: 0;
+    }
+    to{
+        transform: translateY(0px);
+        scale: 1;
+        opacity: 1;
+    }
+}
+
+@keyframes popIn {
+    from {
+        transform: scale(0.90);
+        opacity: 0;
+    }
+    to {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+
+.popIn{
+    animation: popIn 1.15s !important;
+}
+
+.fadeInDown{
+    animation: fadeInDown 0.85s !important;
+}
+
+.fadeInUp{
+    animation: fadeInUp 1s !important;
+}
+
+.popUp{
+    animation: popUp 1.5s !important;
 }
