--- a/app/views/layouts/_topnavbar.html.erb
+++ b/app/views/layouts/_topnavbar.html.erb
@@ -1,21 +1,21 @@
-<div class="container">
-    <header class="border-bottom lh-1 py-3">
-      <div class="row flex-nowrap justify-content-between align-items-center">
-        <div class="col-4 pt-1">
-          <!-- Feature do pundit que apenas fornece acesso as categorias
-             se o usuário tiver acesso ao index (se admin for true)  -->
-          <% if policy(:category).index? %>
-            <%= link_to "See categories", categories_path, class:'link-secondary'%>
-          <% end %>
-        </div>
-        <div class="col-4 text-center">
-          <%= link_to "Blogalizando", root_path, class:'blog-header-logo text-body-emphasis', style:'text-decoration: underline;' %>
-        </div>
-        <div class="col-4 d-flex justify-content-end align-items-center">
-          <%= render 'layouts/links_account'%>
-        </div>
+<div class="container fadeInDown">
+  <header class="border-bottom lh-1 py-3">
+    <div class="row flex-nowrap justify-content-between align-items-center">
+      <div class="col-4 pt-1">
+        <!-- Feature do pundit que apenas fornece acesso as categorias
+            se o usuário tiver acesso ao index (se admin for true)  -->
+        <% if policy(:category).index? %>
+          <%= link_to "See categories", categories_path, class:'link-secondary'%>
+        <% end %>
       </div>
-    </header>
-  
-    <%= yield :category_filter %>
-  </div>
+      <div class="col-4 text-center">
+        <%= link_to "Blogalizando", root_path, class:'blog-header-logo text-body-emphasis fw-bold', style:'text-decoration: underline;' %>
+      </div>
+      <div class="col-4 d-flex justify-content-end align-items-center">
+        <%= render 'layouts/links_account'%>
+      </div>
+    </div>
+  </header>
+
+  <%= yield :category_filter %>
+</div>
