feature: mais implementações css

--- a/app/views/articles/_elsewhere.html.erb
+++ b/app/views/articles/_elsewhere.html.erb
@@ -1,6 +1,6 @@
 <div class="p-4">
     <h4 class="fst-italic mb-3">Elsewhere</h4>
-    <ol class="list-unstyled d-flex gap-2">
+    <ol class="list-unstyled d-flex flex-column gap-2">
       <li>
         <a href="https://github.com/RecheEduardo" target="_blank" class="btn scale-btn bg-gradient bg-dark text-light">
           <i class="fa-brands fa-github"></i> GitHub
@@ -13,7 +13,7 @@
       </li>
       <li>
         <a href="mailto:eduardorechemartins2006@gmail.com" target="_blank" class="btn scale-btn bg-gradient bg-dark text-light">
-          <i class="fa-solid fa-envelope"></i> Mail me
+          <i class="fa-solid fa-envelope"></i> Email
         </a>
       </li>
     </ol>
