--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -30,7 +30,7 @@
         </div>
         <div class="back-btn">
             <%= link_to root_path  do%>
-                <button type="button" class="btn btn-lg btn-outline-secondary">Back</button>
+                <button type="button" class="btn btn-lg btn-secondary">Back</button>
             <% end %>
         </div>
     </div>
