--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -29,7 +29,7 @@
       <nav class="nav nav-underline justify-content-between">
         <% @categories.each do | category | %>
           <%= link_to category.name, articles_path(category: category.name), 
-          class: "nav-item nav-link link-body-emphasis #{'filter-active' if category.name.to_s == params[:category]}" %>
+          class: "nav-item nav-link scale-btn link-body-emphasis #{'filter-active' if category.name.to_s == params[:category]}" %>
         <% end %>
       </nav>
     </div>
