--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -15,55 +15,35 @@
 
         <hr class="w-100 clearfix d-md-none" />
 
-        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-          <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
-          <p>
-            <a class="text-white">MDBootstrap</a>
-          </p>
-          <p>
-            <a class="text-white">MDWordPress</a>
-          </p>
-          <p>
-            <a class="text-white">BrandFlow</a>
-          </p>
-          <p>
-            <a class="text-white">Bootstrap Angular</a>
-          </p>
-        </div>
-
-        <hr class="w-100 clearfix d-md-none" />
-
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
           <h6 class="text-uppercase mb-4 font-weight-bold">
-            Useful links
+            Another projects
           </h6>
           <p>
-            <a class="text-white">Your Account</a>
+            <a class="text-white" href="https://themed-quiz.vercel.app/" target="_blank">
+              React Quiz
+            </a>
           </p>
           <p>
-            <a class="text-white">Become an Affiliate</a>
+            <a class="text-white" href="https://recheeduardo.github.io/EduardoReche-Portfolio/" target="_blank">
+              Personal Portfolio
+            </a>
           </p>
           <p>
-            <a class="text-white">Shipping Rates</a>
+            <a class="text-white" href="https://sportlife.vercel.app/" target="_blank">
+              Sportlife Showcase
+            </a>
           </p>
           <p>
-            <a class="text-white">Help</a>
+            <a class="text-white" href="https://recheeduardo.github.io/TodoList/" target="_blank">
+              ToDo List
+            </a>
           </p>
         </div>
 
         <hr class="w-100 clearfix d-md-none" />
-
-        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-          <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
-          <p><i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
-          <p><i class="fas fa-envelope mr-3"></i> info@gmail.com</p>
-          <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-          <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
-        </div>
       </div>
     </section>
-
-    <hr class="my-3">
 
     <section class="p-3 pt-0">
       <div class="row d-flex align-items-center">
@@ -81,6 +61,7 @@
               class="btn btn-outline-light btn-floating m-1"
               class="text-white"
               role="button"
+              href="https://wa.me/5511994088541?text=Ol%C3%A1%2C%20Eduardo!" target='_blank'
               ><i class="fab fa-whatsapp"></i
             ></a>
 
@@ -88,6 +69,7 @@
               class="btn btn-outline-light btn-floating m-1"
               class="text-white"
               role="button"
+              href="https://www.linkedin.com/in/eduardorechemartins/" target='_blank'
               ><i class="fab fa-linkedin"></i
             ></a>
 
@@ -95,6 +77,7 @@
               class="btn btn-outline-light btn-floating m-1"
               class="text-white"
               role="button"
+              href="https://github.com/RecheEduardo" target='_blank'
               ><i class="fab fa-github"></i
             ></a>
         </div>
